--- a/mvpdemo/src/main/res/layout/activity_main.xml
+++ b/mvpdemo/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -52,7 +52,7 @@
         android:textSize="12dp"
         app:layout_constraintLeft_toRightOf="@id/tv_1"
         app:layout_constraintBottom_toBottomOf="@id/tv_1"/>
-    
+
     <TextView
         android:id="@+id/tab1"
         android:layout_width="0dp"
@@ -87,29 +87,36 @@
         app:layout_constraintLeft_toRightOf="@+id/tab2"
         app:layout_constraintRight_toRightOf="parent"
         />
-    
-    <android.support.constraint.Guideline
+
+    <androidx.support.constraint.Guideline
         android:id="@+id/guideline_h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintGuide_percent="0.8"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline_v" />
 
-    <android.support.constraint.Guideline
+    <androidx.support.constraint.Guideline
         android:id="@+id/guideline_v"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.8"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/banner"
+        app:layout_constraintGuide_percent="0.8"
+        app:layout_constraintStart_toEndOf="@+id/banner"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="#612"
         app:layout_constraintLeft_toRightOf="@+id/guideline_v"
-        app:layout_constraintTop_toBottomOf="@+id/guideline_h"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/guideline_h" />
         <!--app:layout_constraintBottom_toBottomOf="parent"-->
         <!--app:layout_constraintLeft_toLeftOf="parent"-->
         <!--app:layout_constraintTop_toTopOf="parent"-->
@@ -117,4 +124,4 @@
         <!--app:layout_constraintHorizontal_bias="0.9"-->
         <!--app:layout_constraintVertical_bias="0.9"-->
         <!--/>-->
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
