--- a/materialdesigndemo/src/main/res/layout/activity_main.xml
+++ b/materialdesigndemo/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,40 +12,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing_toolbar_layout"
-            app:titleEnabled="false"
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tool_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/tool_bar"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                app:layout_scrollFlags="scroll"
-                />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+            android:layout_height="55dp"
+            app:layout_scrollFlags="scroll|enterAlways"
+            />
     </com.google.android.material.appbar.AppBarLayout>
-    
-    <com.chenlei.materialdesigndemo.bottom_navigation_view.NoScrollViewPager
-       android:id="@+id/view_pager"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-        android:layout_below="@+id/app_bar_layout"
-       android:layout_above="@+id/bottom_navigation_view"
-       />
 
-    
+    <!--<androidx.core.widget.NestedScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+
+    <!--</androidx.core.widget.NestedScrollView>-->
+    <com.chenlei.materialdesigndemo.bottom_navigation_view.NoScrollViewPager
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+
+        />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-
+        android:layout_gravity="bottom"
         app:itemIconTint="@drawable/bottom_navigation_color"
         app:itemTextColor="@drawable/bottom_navigation_color"
         app:menu="@menu/botton_navigation_menu"
         />
-
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
