修改使用ViewPager是隐藏ToolBar的ViewPager不显示的bug

--- a/materialdesigndemo/src/main/res/layout/activity_main.xml
+++ b/materialdesigndemo/src/main/res/layout/activity_main.xml
@@ -20,18 +20,19 @@
             />
     </com.google.android.material.appbar.AppBarLayout>
 
-    <!--<androidx.core.widget.NestedScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
-
-    <!--</androidx.core.widget.NestedScrollView>-->
-    <com.chenlei.materialdesigndemo.bottom_navigation_view.NoScrollViewPager
-        android:id="@+id/view_pager"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        />
+        <com.chenlei.materialdesigndemo.bottom_navigation_view.NoScrollViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_view"
