--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -11,6 +13,7 @@
         android:layout_gravity="end|bottom"
         android:src="@drawable/ic_done"
         android:layout_margin="16dp"
+        app:layout_behavior="com.example.appcommonfunctions.RotateBehavior"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
