--- a/materialdesigndemo/src/main/res/layout/activity_main.xml
+++ b/materialdesigndemo/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
     tools:context=".bottom_navigation_view.MainActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinator_layout"
         android:fitsSystemWindows="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar_layout"
-            android:fitsSystemWindows="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -24,31 +24,45 @@
                 app:layout_scrollFlags="scroll|enterAlways"
                 />
         </com.google.android.material.appbar.AppBarLayout>
-        <androidx.core.widget.NestedScrollView
-            android:id="@+id/nested_scroll_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            >
+        <!--<androidx.core.widget.NestedScrollView-->
+            <!--android:id="@+id/nested_scroll_view"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:fillViewport="true"-->
+            <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
+            <!--&gt;-->
 
             <com.chenlei.materialdesigndemo.bottom_navigation_view.NoScrollViewPager
                 android:id="@+id/view_pager"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                 />
-        </androidx.core.widget.NestedScrollView>
+        <!--</androidx.core.widget.NestedScrollView>-->
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:itemIconTint="@drawable/bottom_navigation_color"
+            app:itemTextColor="@drawable/bottom_navigation_color"
+            app:menu="@menu/botton_navigation_menu"
+            android:layout_gravity="bottom"
+            app:layout_behavior="com.chenlei.materialdesigndemo.bottom_navigation_view.BottomNavigationViewBehavior"
+            />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_marginBottom="47dp"
+            android:src="@drawable/ic_done"
+            app:layout_anchorGravity="top|right"
+            app:layout_anchor="@id/bottom_navigation_view"
+            app:layout_behavior="com.chenlei.materialdesigndemo.bottom_navigation_view.FABBehavior"
+            />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:itemIconTint="@drawable/bottom_navigation_color"
-        app:itemTextColor="@drawable/bottom_navigation_color"
-        app:menu="@menu/botton_navigation_menu"
-        android:layout_alignParentBottom="true"
-        />
 
     <!--此处有bug暂停使用-->
     <!--<com.google.android.material.navigation.NavigationView-->
