--- a/materialdesigndemo/src/main/res/layout/activity_main.xml
+++ b/materialdesigndemo/src/main/res/layout/activity_main.xml
@@ -40,6 +40,18 @@
                 />
         <!--</androidx.core.widget.NestedScrollView>-->
 
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:src="@drawable/ic_done"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="?attr/actionBarSize"
+            app:layout_anchorGravity="bottom|right"
+            app:layout_anchor="@id/bottom_navigation_view"
+            app:layout_behavior="com.chenlei.materialdesigndemo.bottom_navigation_view.FABBehavior"
+        />
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation_view"
             android:layout_width="match_parent"
@@ -51,16 +63,6 @@
             app:layout_behavior="com.chenlei.materialdesigndemo.bottom_navigation_view.BottomNavigationViewBehavior"
             />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_marginBottom="47dp"
-            android:src="@drawable/ic_done"
-            app:layout_anchorGravity="top|right"
-            app:layout_anchor="@id/bottom_navigation_view"
-            app:layout_behavior="com.chenlei.materialdesigndemo.bottom_navigation_view.FABBehavior"
-            />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
