--- a/andriodprimarycodedemo/src/main/res/layout/activity_about.xml
+++ b/andriodprimarycodedemo/src/main/res/layout/activity_about.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".four_components.AboutActivity">
+    tools:context=".four_components.about_activity.AboutActivity">
 
 </android.support.constraint.ConstraintLayout>
