--- a/andriodprimarycodedemo/src/main/res/layout/activity_custom_view.xml
+++ b/andriodprimarycodedemo/src/main/res/layout/activity_custom_view.xml
@@ -8,6 +8,7 @@
     tools:context=".custom_view.CustomViewActivity">
 
     <com.example.andriodprimarycodedemo.custom_view.CustomBasicShapeView
+        android:id="@+id/custom_basic_shape_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
