添加画布使用相关代码

--- a/andriodprimarycodedemo/src/main/res/layout/activity_custom_view.xml
+++ b/andriodprimarycodedemo/src/main/res/layout/activity_custom_view.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".custom_view.CustomViewActivity">
 
-    <com.example.andriodprimarycodedemo.custom_view.CustomBasicShapeView
+    <com.example.andriodprimarycodedemo.custom_view.CustomCanvasView
         android:id="@+id/custom_basic_shape_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
